# adventofcode25

./: .gitignore  Cargo.toml  DAY_STRUCTURE.md  LICENSE  README.md
days/day01/: main.rs
days/day02/: main.rs
days/day03/: main.rs
days/day04/: main.rs
days/day05/: main.rs
days/day06/: main.rs
days/day07/: main.rs
days/day08/: main.rs
days/day09/: main.rs
days/day10/: main.rs
days/day11/: main.rs
days/day12/: main.rs
src/: lib.rs
