[package]
name = "adventofcode25"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "day01"
path = "days/day01/main.rs"

[[bin]]
name = "day02"
path = "days/day02/main.rs"

[[bin]]
name = "day03"
path = "days/day03/main.rs"

[[bin]]
name = "day04"
path = "days/day04/main.rs"

[[bin]]
name = "new_day"
path = "src/bin/new_day.rs"

[dependencies]
regex = "1.12.2"
