[package]
name = "adventofcode25"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "day01"
path = "days/day01/main.rs"

[[bin]]
name = "day02"
path = "days/day02/main.rs"

[[bin]]
name = "day03"
path = "days/day03/main.rs"

[[bin]]
name = "day04"
path = "days/day04/main.rs"

[[bin]]
name = "new_day"
path = "src/bin/new_day.rs"

[dependencies]
pathfinding = "4.14.0"
regex = "1.12.2"
z3 = "0.19.5"

[[bin]]
name = "day05"
path = "days/day05/main.rs"

[[bin]]
name = "day06"
path = "days/day06/main.rs"

[[bin]]
name = "day07"
path = "days/day07/main.rs"

[[bin]]
name = "day08"
path = "days/day08/main.rs"

[[bin]]
name = "day09"
path = "days/day09/main.rs"

[[bin]]
name = "day10"
path = "days/day10/main.rs"

[[bin]]
name = "day11"
path = "days/day11/main.rs"
